# Operating_System_Lab

./: CMakeLists.txt  LabWork10_Preemptive_Priority.cpp  LabWork11_SRTF.cpp  LabWork12_ThreadFactorial.c  LabWork12_ThreadSum.c  LabWork12_Threads.c  LabWork13_Fit.cpp  LabWork13_a_FirstFit.cpp  LabWork13_b_BestFit.cpp  LabWork13_c_WorstFit.cpp  LabWork1_fork_exec.c  LabWork2.c  LabWork3_MemInfo.c  LabWork4_FileDetails.c  LabWork5_CpFile_SystemHandling.c  LabWork6_FCFS.cpp  LabWork7_RoundRobin.cpp  LabWork8_SJF.cpp  LabWork9_Non_Preemptive_Priority.cpp
