cmake_minimum_required(VERSION 3.20)
project(Operating_System_Lab)

set(CMAKE_CXX_STANDARD 14)

add_executable(LabWork1_fork_exec LabWork1_fork_exec.c)
add_executable(LabWork2_CPUInfo LabWork2_CPUInfo.c)
add_executable(LabWork3_MemInfo LabWork3_MemInfo.c)
add_executable(LabWork4_FileDetails LabWork4_FileDetails.c)
add_executable(LabWork5_CpFile_SystemHandling LabWork5_CpFile_SystemHandling.c)
add_executable(LabWork6_FCFS LabWork6_FCFS.cpp)
add_executable(LabWork7_RoundRobin LabWork7_RoundRobin.cpp)
add_executable(LabWork8_SJF LabWork8_SJF.cpp)
add_executable(LabWork9_Non_Preemptive_Priority LabWork9_Non_Preemptive_Priority.cpp)
add_executable(LabWork10_Preemptive_Priority LabWork10_Preemptive_Priority.cpp)
add_executable(LabWork11_SRTF LabWork11_SRTF.cpp)
add_executable(LabWork13_a_FirstFit LabWork13_a_FirstFit.cpp)
add_executable(LabWork13_b_BestFit LabWork13_b_BestFit.cpp)
add_executable(LabWork13_c_WorstFit LabWork13_c_WorstFit.cpp)
find_package (Threads)
add_executable(LabWork12_ThreadFactorial LabWork12_ThreadFactorial.c)
add_executable(LabWork12_ThreadSum LabWork12_ThreadSum.c)
target_link_libraries (LabWork12_ThreadFactorial ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries (LabWork12_ThreadSum ${CMAKE_THREAD_LIBS_INIT})
